analyzer/tests/snapshots/errors__external_call_wrong_number_of_params.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `bar` expects 2 arguments, but 1 was provided
  ┌─ tests/fixtures/errors/external_call_wrong_number_of_params.fe:7:25
  │
7 │         Foo(address(0)).bar(42)
  │                         ^^^ -- supplied 1 argument
  │                         │    
  │                         expects 2 arguments


